# httpmate

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json
crates/httpmate-core/: Cargo.toml
crates/httpmate-core/src/: ca.rs  config.rs  controller.rs  events.rs  intercept.rs  lib.rs  macos.rs  proxy.rs  store.rs  tee.rs
crates/httpmate-core/src/macos/: networksetup.rs
crates/httpmate-core/tests/: proxy.rs
docs/: ARCHITECTURE.md
src/: App.tsx  format.ts  ipc.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CaModal.tsx  DetailPane.tsx  StatusBar.tsx  Toolbar.tsx  TrafficTable.tsx
