[workspace]
resolver = "2"
members = ["crates/httpmate-core", "src-tauri"]
# src-tauri needs platform webview libraries; keep day-to-day cargo commands
# scoped to the core crate, which builds everywhere.
default-members = ["crates/httpmate-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
arc-swap = "1"
base64 = "0.22"
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "http1", "http2", "tls12", "logging", "webpki-roots"] }
hyper-util = { version = "0.1", features = ["full"] }
pin-project-lite = "0.2"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webpki-roots = "0.26"

[profile.release]
lto = true
codegen-units = 1
