[package]
name = "httpmate-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "httpmate — HTTP debugging proxy"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
httpmate-core = { path = "../crates/httpmate-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
